move helper functions to separate file

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "graftphp/framework": "*"
     },
     "autoload": {
+        "files": [
+            "App/Util/helpers.php"
+        ],
         "psr-4": {
             "App\\": "App/"
         }
