--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,14 @@
     "homepage": "https://github.com/graftphp/graft",
     "type": "project",
     "require": {
-        "graftphp/framework": "*"
+        "graftphp/framework": "0.0.1"
     },
     "autoload": {
         "psr-4": {
             "App\\": "App/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
